<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	 <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"/>
	 <item
        android:id="@+id/action_visitors"
        android:orderInCategory="200"
        android:title="@string/action_visitors"/>
	 <item
        android:id="@+id/action_bookings"
        android:orderInCategory="200"
        android:title="@string/action_bookings"/>
	   <item
        android:id="@+id/action_findMember"
        android:orderInCategory="200"
        android:title="@string/action_findMember"/>
	  
	  <item
        android:id="@+id/action_addMember"
        android:orderInCategory="300"
        android:title="@string/action_add"/>
	 <item
        android:id="@+id/action_update"
        android:orderInCategory="400"
        android:title="@string/action_sync"/>
     <item
        android:id="@+id/action_halt"
        android:orderInCategory="500"
        android:title="@string/action_halt"/>    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="600"
        android:title="@string/action_settings"
        android:showAsAction="never" />
       
</menu>