<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

	<LinearLayout android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView android:id="@+id/welcome"
        	android:padding="3dp"
    		android:textSize="20sp"
        	android:textStyle="bold"
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
        	android:textIsSelectable="true"
        	android:text="@string/welcome"/>
		
	</LinearLayout>
	<Button android:id="@+id/querycontent"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/button_content_query"
	  		android:onClick="lastVisitorsList"
	  		android:layout_below="@id/topbar" />
 	
	<Button android:id="@+id/scanTag"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/topbar"
	    android:layout_toRightOf="@id/querycontent"
	    android:text="@string/button_scan_tag"
	    android:onClick="scanTag" />
</RelativeLayout>