<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    tools:context=".DisplayResultsActivity" >
    
   <View 
        android:id="@+id/visitor_colour_block"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@color/palegreen"/>
    <RelativeLayout
        android:id="@+id/imagewrapper"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_toRightOf="@id/visitor_colour_block">
		<ImageView android:id="@+id/image"
		     android:contentDescription="@string/image_description"
		     android:layout_alignParentTop="true"
		     android:layout_width="120sp"
		     android:layout_height="120sp" />
	</RelativeLayout>
     <TextView android:id="@+id/name"
        android:padding="3dp"
     	android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/imagewrapper"/>
    
     <ImageView android:id="@+id/smiley"
        android:contentDescription="@string/smiley_description"
        android:layout_alignTop="@id/name"
        android:layout_alignBottom="@id/name"
        android:layout_alignParentRight="true"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content" />
      
      <ImageView android:id="@+id/task"
        android:contentDescription="@string/task_description"
        android:layout_toLeftOf="@id/smiley"
        android:layout_alignTop="@id/smiley"
        android:layout_alignBottom="@id/smiley"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
     
     <TextView android:id="@+id/time"
        android:textSize="16sp"
        android:padding="3dp"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_toRightOf="@id/imagewrapper"
        android:layout_below="@id/name" />
    
     <TextView android:id="@+id/deny"
        android:textSize="16sp"
        android:padding="3dp"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_toRightOf="@id/imagewrapper"
        android:layout_below="@id/time" /> 
</RelativeLayout>
