<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
<RelativeLayout
    android:id="@+id/pageLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MemberDetails" >  
	<com.treshna.hornet.PagerContainer
	    android:id="@+id/pagercontainer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/gym" >
    <android.support.v4.view.ViewPager
    	android:id="@+id/gallery"
    	android:layout_width="150dp"
    	android:layout_height="150dp"
    	android:layout_gravity="center_horizontal"/>
	</com.treshna.hornet.PagerContainer>   
    <TextView
    	android:id="@+id/memberDetailsH"
        android:padding="3dp"
    	android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/gym"
        android:text="@string/heading_member_info"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_below="@id/pagercontainer"
    />
     
    <TextView android:id="@+id/memberName"
        android:padding="3dp"
    	android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_below="@id/memberDetailsH"/>
    
    <ImageView
        android:id="@+id/smiley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/memberName"
        android:layout_alignTop="@id/memberName"
       	android:layout_below="@id/memberDetailsH"
        android:contentDescription="@string/smiley_description"/>
	 
	 <LinearLayout android:id="@+id/memberDetails"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/memberName"
    	android:orientation="vertical"
    	tools:context=".MemberDetails">
	</LinearLayout>
	 <TextView
    	android:id="@+id/memberinfoH"
        android:padding="3dp"
    	android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/gym"
        android:text="@string/heading_member_details"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_below="@id/memberDetails"
    />
	 <LinearLayout android:id="@+id/memberinfo"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/memberinfoH"
    	android:orientation="vertical"
    	tools:context=".MemberDetails">
	</LinearLayout>
   
    <LinearLayout android:id="@+id/membercontact"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/memberinfo"
    	android:orientation="vertical"
    	tools:context=".MemberDetails">
		
		<TextView
    		android:id="@+id/memberContactH"
        	android:padding="3dp"
    		android:textSize="20sp"
        	android:textStyle="bold"
        	android:textColor="@color/white"
        	android:background="@color/gym"
        	android:text="@string/heading_member_contact"
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
        	android:textIsSelectable="false"
    	/>
       
    
    </LinearLayout>
</RelativeLayout>
</ScrollView>